--- a/preamble.tex
+++ b/preamble.tex
@@ -11,7 +11,8 @@
 \usepackage{enumitem}
 \usepackage{bm}
 \usepackage{relsize}
-\usepackage[figurename=图,tablename=表]{caption}
+\usepackage[figurename=图, tablename=表]{caption}
+\usepackage{csquotes}
 \usepackage{chngcntr}
 \counterwithin{figure}{section}
 \counterwithin{table}{section}
