refine the subsection of active set algorithm for solving QP

--- a/chap7.tex
+++ b/chap7.tex
@@ -27,9 +27,9 @@
 
 \input{content/intro}
 
-\input{content/subsec-eq-qp}
+\input{content/subsec1-eq-qp}
 
-\input{content/subsec-active-set-alg}
+\input{content/subsec2-active-set-alg}
 
 \input{content/exercises}
 
