--- a/preamble.tex
+++ b/preamble.tex
@@ -76,6 +76,9 @@
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
 
+% \algrenewcommand\algorithmicrequire{\textbf{Input:}}
+% \algrenewcommand\algorithmicensure{\textbf{Output:}}
+
 \newtheorem{thm}{定理}[section]
 \newtheorem{prop}[thm]{命题}
 \newtheorem{Def}[thm]{定义}
