--- a/content/subsec2-active-set-alg.tex
+++ b/content/subsec2-active-set-alg.tex
@@ -141,7 +141,7 @@ j = \argmin_{\substack{i: i \not\in \mathcal{A} \\ {a}_i^T {p}^{(k)} > 0}} \frac
 \IF{$\lambda^{(k)}_q \geqslant 0$}
 
 \STATE ${x}^* \gets {x}^{(k)}$\;
-\STATE 算法终止, 返回~${x}^*$\;
+\STATE \textbf{算法终止, 返回~${x}^*$}\;
 
 \ELSE
 
