update auto-generated files

--- a/chap6_in_one.tex
+++ b/chap6_in_one.tex
@@ -113,9 +113,9 @@
 \author{}
 \title{特殊优化模型方法}
 
-\setcounter{chapter}{7}
+\setcounter{chapter}{6}
 
-\setcounter{section}{2}
+\setcounter{section}{1}
 
 \begin{document}
 
@@ -565,7 +565,7 @@ j = \argmin_{\substack{i: i \not\in \mathcal{A} \\ {a}_i^T {p}^{(k)} > 0}} \frac
 \IF{$\lambda^{(k)}_q \geqslant 0$}
 
 \STATE ${x}^* \gets {x}^{(k)}$\;
-\STATE 算法终止, 返回~${x}^*$\;
+\STATE \textbf{算法终止, 返回~${x}^*$}\;
 
 \ELSE
 
