--- a/chap6_in_one.tex
+++ b/chap6_in_one.tex
@@ -109,6 +109,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\graphicspath{{figures/}}
 
 \author{}
 \title{特殊优化模型方法}
@@ -130,13 +131,13 @@
 
 % finished
 
-具有二次目标函数和线性约束的约束优化问题被称为二次规划~(quadratic programming, QP) 问题. 这是一类非常常见的约束优化问题, 且它们也常常作为一般的约束优化问题的子问题出现. 二次规划问题的一般形式为
+具有二次目标函数和线性约束的约束优化问题被称为二次规划~(Quadratic Programming, QP) 问题. 这是一类非常常见的约束优化问题, 且它们也常常作为一般的约束优化问题的子问题出现. 二次规划问题的一般形式为
 \begin{equation}
 \label{eq:quadratic-programming-1}
 \begin{array}{cl}
 \min & q({x}) := \frac{1}{2} {x}^T G {x} + {d}^T {x}, \\
-{\rm s.t.} & {a}_i^T {x} = b_i, ~~ i \in \mathcal{E} = \{1, \ldots, m_1\}, \\
-& {a}_i^T {x} \leqslant b_i, ~~ i \in \mathcal{I} = \{m_1 + 1, \ldots, m\},
+{\rm s.t.} & \left\{\begin{array}{l}{a}_i^T {x} = b_i, ~~ i \in \mathcal{E} = \{1, \ldots, m_1\}, \\
+ {a}_i^T {x} \leqslant b_i, ~~ i \in \mathcal{I} = \{m_1 + 1, \ldots, m\},\end{array}\right.
 \end{array}
 \end{equation}
 其中~$G$ 是~$n$ 阶对称方阵, ${d}, {a}_i,$ 是~$n$ 维列向量, $b_i$ 是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达为更加紧凑的形式:
@@ -149,8 +150,7 @@
 \end{equation}
 其中~$A_{\mathcal{E}} = ({a}_1, \ldots, {a}_{m_1}), {b}_{\mathcal{E}} = (b_1, \ldots, b_{m_1})^T;$ $A_{\mathcal{I}} = ({a}_{m_1+1}, \ldots, {a}_m), {b}_{\mathcal{I}} = (b_{m_1+1}1, \ldots, b_m)^T.$ $A^T_{\mathcal{I}} {x} \preccurlyeq {b}_{\mathcal{I}}$ 表示
 向量~$A^T_{\mathcal{I}} {b}_{\mathcal{I}}$ 的每个元素都小于等于向量~${b}_{\mathcal{I}}$ 相应位置元素. 问题~\eqref{eq:quadratic-programming-2} 的~KKT 条件为
-\begin{equation}
-\label{eq:quadratic-programming-kkt}
+\begin{equation}\label{eq:quadratic-programming-kkt}
 \begin{aligned}
 & \nabla q({x}^*) + A {\lambda}^* = {0}, \\
 & A^T_{\mathcal{E}} {x}^* - {b}_{\mathcal{E}} = {0}, \\
@@ -160,7 +160,9 @@
 其中~$A = ({a}_1, \ldots, {a}_m);$ ${\lambda}^* = (\lambda_1^*, \ldots, \lambda_m^*)^T$ 为拉格朗日乘子, ${\lambda}^*_{\mathcal{I}} = (\lambda_{m_1+1}^*, \ldots, \lambda_m^*)^T;$ ${x}^*$ 为~KKT 点. 值得注意的是, 由于二次规划问题线性约束规范总成立, 二次规划问题的任一解都满足~KKT
 条件~\eqref{eq:quadratic-programming-kkt}.
 
-与线性规划问题类似, 一个二次规划问题总是能在有限步内求解, 或者证明其是不可行的或者无~(下) 界的. 当二次规划问题有解时, 若目标函数~$q({x}) = \frac{1}{2} {x}^T G {x} + {d}^T {x}$ 的~Hessian 阵~$G$ 是半正定的, 那么~$q({x})$ 是凸函数, 则该二次规划问题是凸规划问题, 其~KKT 点即为全局极小值点; 如果~$G$ 是正定的, 则解是唯一的~(唯一的全局极小值点). 当~$G$ 不定时, 目标函数~$q({x})$ 非凸, 可能有多个鞍点以及局部极小值点, 这些局部极小值点可能不是全局最优解. 此时, 求解全局最优解是一个~NP-难的问题~\cite{Murty_1987}.
+与线性规划问题类似, 对于一个二次规划问题来说，要么它的解能在有限步内被求得, 要么我们可以证明这个问题是不可行的或者无~(下) 界的. 当二次规划问题有解时, 若目标函数~$q({x}) = \frac{1}{2} {x}^T G {x} + {d}^T {x}$ 的~Hessian 阵~$G$ 是半正定的, 那么~$q({x})$ 是凸函数, 则该二次规划问题是凸规划问题, 其~KKT 点即为全局极小值点; 如果~$G$ 是正定的, 则解是唯一的~(唯一的全局极小值点). 当~$G$ 不定时, 目标函数~$q({x})$ 非凸, 可能有多个鞍点以及局部极小值点, 这些局部极小值点可能不是全局最优解. 此时, 求解全局最优解是一个~NP-难的问题~\cite{Murty_1987}.
+
+% Murty_1987: K. G. Murty, S. N. Kabadi. Some NP-complete problems in quadratic and nonlinear programming[J]. Mathematical Programming, 1987, 39(2): 117-129.
 
 
 \subsection{等式约束的二次规划问题}
@@ -213,7 +215,6 @@ A = \begin{bmatrix} A_1 \\ A_2 \end{bmatrix}, ~ G = \begin{bmatrix} G_{11} & G_{
 \begin{equation*}
 {\lambda}^* = -A_1^{-1} \left( G_{11} {x}_1^* + G_{12} {x}_2^* + {d}_1 \right).
 \end{equation*}
-
 \begin{exam}\label{eg:7.2.1}
 用直接消元法求解下列等式约束的二次规划问题
 \begin{equation*}
@@ -246,7 +247,7 @@ $\psi$ 的~{\rm Hessian} 阵~$\nabla^2 \psi = \psi'' = \frac{10}{3} > 0,$ 于是
 \end{exam}
 
 直接消元法是一种朴素初等的方法, 非常直观, 但不是求解等式约束二次规划
-问题~\eqref{eq:quadratic-programming-eq-constrained} 的最优方法. 还可以采用广义消元法~(generalized elimination) 来求解. 这个方法的名字来源于矩阵的广义逆, 利用矩阵的广义逆来表
+问题~\eqref{eq:quadratic-programming-eq-constrained} 的最优方法. 还可以采用广义消元法~(Generalized Elimination) 来求解. 这个方法的名字来源于矩阵的广义逆, 利用矩阵的广义逆来表
 达问题~\eqref{eq:quadratic-programming-eq-constrained} 的等式约束~(线性方程组) $A^T {x} = {b}$ 的通解, 回代入目标函数~$q({x}),$ 得到一个无约束的极小化问题. 广义消元法的本质是对变量做了线性变换, 是直接消元法~\eqref{eq:quadratic-programming-eq-constrained-subs} 的推广.
 
 对于非齐次线性方程组~$A^T {x} = {b},$ 它如果有解, 那么它的通解可以表示为
@@ -254,13 +255,13 @@ $\psi$ 的~{\rm Hessian} 阵~$\nabla^2 \psi = \psi'' = \frac{10}{3} > 0,$ 于是
 \label{eq:general-elim-1}
 {x} = Y {b} + {s}
 \end{equation}
-其中~$Y \in \mathbb{R}^{n\times m}$ 是系数矩阵~$A^T$ 的某个广义逆, ${s}$ 是齐次线性方程组~$A^T {x} = 0$ 的解, 或者说属于~$A$ 的列零空间(null column space). ${s}$ 也被称作可行点~${x}$ 处的可行增量. $m\times n$ 的矩阵~$A^T$ 的广义逆, 指的是一个~$n\times m$ 的矩阵~$Y,$ 满足~$A^T Y A^T = A^T.$ 同时, 非齐次线性方程组~$A^T {x} = {b}$ 有解当且仅当~$A^T Y {b} = {b}.$ 假设取定了~$n \times m$ 的矩阵~$Y$ 以及~$n \times (n-m)$ 的矩阵~$Z,$ 满足
+其中~$Y \in \mathbb{R}^{n\times m}$ 是系数矩阵~$A^T$ 的某个广义逆, ${s}$ 是齐次线性方程组~$A^T {x} = 0$ 的解, 或者说属于~$A$ 的列零空间~(Null Column Space). 这里, $n\times m$ 矩阵~$A$ 的列零空间指的是与矩阵~$A$ 所有列都正交的~$n$ 维向量的全体, 它们构成了~$\mathbb{R}^{n}$ 的一个线性子空间. 一个${s}$ 也被称作可行点~${x}$ 处的可行增量. $m\times n$ 的矩阵~$A^T$ 的广义逆, 指的是一个~$n\times m$ 的矩阵~$Y,$ 满足~$A^T Y A^T = A^T.$ 同时, 非齐次线性方程组~$A^T {x} = {b}$ 有解当且仅当~$A^T Y {b} = {b}.$ 假设取定了~$n \times m$ 的矩阵~$Y$ 以及~$n \times (n-m)$ 的矩阵~$Z,$ 满足
 \begin{equation}
 \label{eq:eq:general-elim-req}
 \begin{bmatrix} Y & Z\end{bmatrix} \text{ 非奇异, 且~} A^T Y = I_m, ~ A^T Z = 0.
 \end{equation}
-也就是说~$Y$ 是~$A^T$ 的一个右广义逆~(比广义逆的定义~$A^T Y A^T = A^T$ 更进一步要求~$A^T Y = I_m$). 而矩阵~$Z$ 的列~${z}_1, \ldots, {z}_{n-m}$ 构成了~$A$ 的列零空间的一组基,
-也被称作既约~(reduced) 坐标方向, 矩阵~$Z$ 也被称作零空间矩阵~(null-space matrix). 矩阵~$Z^T G Z$ 被称作二次规划问题~\eqref{eq:quadratic-programming-eq-constrained} 的既约~Hessian 阵. 那么,
+也就是说~$Y$ 是~$A^T$ 的一个右广义逆, 即满足~$A^T Y = I_m$~(回忆一下, 一般的广义逆只要求满足~$A^T Y A^T = A^T$). 而矩阵~$Z$ 的列~${z}_1, \ldots, {z}_{n-m}$ 构成了~$A$ 的列零空间的一组基,
+也被称作既约~(Reduced) 坐标方向, 矩阵~$Z$ 也被称作零空间矩阵~(Null-Space Matrix). 矩阵~$Z^T G Z$ 被称作二次规划问题~\eqref{eq:quadratic-programming-eq-constrained} 的既约~Hessian 阵. 那么,
 可行增量~${s}$ 可以表示为~${z}_1, \ldots, {z}_{n-m}$ 的线性组合
 \begin{equation}
 \label{eq:general-elim-2}
@@ -298,7 +299,7 @@ A {\lambda}^* = -\left( G {x}^* + {d} \right) =: - {g}^*,
 {\lambda}^* = \left( A^T Y \right)^T {\lambda}^* = -Y^T {g}^*.
 \end{equation}
 
-到目前为止, 我们还没有介绍如何选取, 或者说构造矩阵~$Y$ 和~$Z.$ 这两个矩阵的构造方法有很多种, 通常首选的方法是正交分解法~(orthogonal factorization method): 对矩阵~$A$ 进行~QR 分解, 即
+到目前为止, 还没有介绍如何选取, 或者说构造矩阵~$Y$ 和~$Z.$ 矩阵~$Y,$ $Z$ 的构造方法有很多种, 通常首选的是正交分解法~(Orthogonal Factorization Method). 对矩阵~$A$ 进行~QR 分解, 即
 \begin{equation}
 \label{eq:quadratic-programming-qr-decomp-1}
 A = Q \begin{bmatrix} R \\ 0 \end{bmatrix} = \begin{bmatrix} Q_1 & Q_2 \end{bmatrix} \begin{bmatrix} R \\ 0 \end{bmatrix} = Q_1 R,
@@ -312,7 +313,7 @@ Y = Q_1 R^{-T}, ~~ Z = Q_2
 \begin{equation*}
 R^T {v} = {b}
 \end{equation*}
-得到一个特解~${v},$ 进而可以得到~\eqref{eq:general-elim-3} 中的特解
+得到一个特解~${v},$ 进而得到~\eqref{eq:general-elim-3} 中的特解
 \begin{equation*}
 Y {b} = Y R^T {v} = Q_1 {v}.
 \end{equation*}
@@ -408,7 +409,7 @@ E & = G^{-1} A \left( A^TG^{-1}A \right)^{-1},\\
 F & = - \left( A^TG^{-1}A \right)^{-1}.
 \end{aligned}
 \end{equation}
-相关的方法被称作~Schur 补法~(Schur-complement method). 这个名字来源于, 执行分块消元操作的时候, 会得到矩阵~$G$ 的~Schur 补~$-A^TG^{-1}A.$ 要注意的是, Schur 补法要求~$G$ 可逆, 而这并不是~KKT 矩阵非奇异的必要条件; 同时基于数值稳定性等方面的考虑, 只有当~$G$ 正定以及~$A^TG^{-1}A$ 的计算开销足够小等一系列条件得到满足, Schur 补法才有应用的价值.
+相关的方法被称作~Schur 补法~(Schur-Complement Method). 这个名字来源于, 执行分块消元操作的时候, 会得到矩阵~$G$ 的~Schur 补~$-A^TG^{-1}A.$ 要注意的是, Schur 补法要求~$G$ 可逆, 而这并不是~KKT 矩阵非奇异的必要条件; 同时基于数值稳定性等方面的考虑, 只有当~$G$ 正定以及~$A^TG^{-1}A$ 的计算开销足够小等一系列条件得到满足, Schur 补法才有应用的价值.
 
 可以利用式~\eqref{eq:quadratic-programming-qr-decomp-general} 定义的矩阵~$Y,$ $Z$, 来求~KKT 矩阵的逆矩阵, 有
 \begin{equation}
@@ -419,28 +420,28 @@ E & = Y - Z \left( Z^T G Z \right)^{-1} Z^T G Y,\\
 F & = Y^T G Z \left( Z^T G Z \right)^{-1} Z^T G Y - Y^T G Y.\\
 \end{aligned}
 \end{equation}
-这样, 可以利用矩阵~$Y,$ $Z$ 和~$Z^T G Z$ 的~Cholesky 分解~$L L^T$ 等计算方法来分解~KKT 矩阵, 相关的方法被称作零空间法~(null-space method). 这一名称来源于矩阵~$Z$ 的选取, 即~$Z$ 的列构成约束条件系数矩阵的转置矩阵~$A$ 的列零空间. 对应于不同的~$Y$ 和~$Z$ 的选取, 有不同的零空间法, 如上面介绍的广义消元法.
+这样, 可以利用矩阵~$Y,$ $Z$ 和~$Z^T G Z$ 的~Cholesky 分解~$L L^T$~($L$ 是某个下三角矩阵) 等计算方法来分解~KKT 矩阵, 相关的方法被称作零空间法~(Null-Space Method). 这一名称来源于矩阵~$Z$ 的选取, 即~$Z$ 的列构成约束条件系数矩阵的转置矩阵~$A$ 的列零空间. 对应于不同的~$Y$ 和~$Z$ 的选取, 有不同的零空间法, 如上面介绍的广义消元法.
 
 
 \subsection{求解二次规划问题的积极集法}
 \label{subsec:7.2.2}
 % finished
 
-对于一般的带不等式约束的二次规划问题~\eqref{eq:quadratic-programming-1}, 有一系列的实用算法来求解这些问题. 经典的积极集法~(active-set methods) 自从~20 世纪~70 年代起被广泛应用于求解二次规划问题. 积极集法适用于求解中小规模~(成百上千个变量) 的凸和非凸的二次规划问题. 梯度投影法~(gradient-projection methods) 是属于积极集法的一种特殊的算法, 是经典积极集法的推广, 能够非常高效地求解简单约束的二次规划问题, 例如对每个变量的约束都是区间约束的二次规划问题~($a_i \leqslant x_i \leqslant b_i,$ 称这样的问题为~BoxQP). 还有一类方法是内点法~(interior-point methods), 这类方法被广泛应用于求解二次规划问题的时间比经典积极集法稍晚, 大概始于~20 世纪~90 年代. 内点法适用于求解大规模的凸二次规划问题.
+对于一般的带不等式约束的二次规划问题~\eqref{eq:quadratic-programming-1}, 有一系列的实用算法来求解这些问题. 经典的积极集法~(Active-Set Methods) 自从~20 世纪~70 年代起被广泛应用于求解二次规划问题. 积极集法适用于求解中小规模~(成百上千个变量) 的凸和非凸的二次规划问题. 梯度投影法~(Gradient-Projection Methods) 是属于积极集法的一种特殊的算法, 是经典积极集法的推广, 能够非常高效地求解简单约束的二次规划问题, 例如对每个变量的约束都是区间约束的二次规划问题~($a_i \leqslant x_i \leqslant b_i,$ 称这样的问题为~BoxQP). 还有一类方法是内点法~(Interior-Point Methods), 广泛应用于求解二次规划问题的时间比经典积极集法稍晚, 大概始于~20 世纪~90 年代. 内点法适用于求解大规模的凸二次规划问题. 本节主要介绍如何利用积极集法将等式约束问题的求解方法推广以求解带不等式约束的二次规划问题. 为描述简单, 假设原问题是凸二次规划问题.
 
-本节主要介绍如何利用积极集法将等式约束问题的求解方法推广以求解带不等式约束的二次规划问题. 为描述简单, 假设原问题是凸二次规划问题. 回顾一下, 对于二次规划问题~\eqref{eq:quadratic-programming-1}, 积极集~$\mathcal{A}(x)$ 的定义为
+回顾一下, 对于二次规划问题~\eqref{eq:quadratic-programming-1}, 积极集~$\mathcal{A}(x)$ 的定义为
 \begin{equation}
 \label{eq:qp-active-set}
 \mathcal{A} = \mathcal{A}({x}) = \left\{ i : ~ {a}_i^T {x} = b_i, ~ i \in \mathcal{E} \cup \mathcal{I} \right\},
 \end{equation}
-即在点~${x}$ 处, 等式成立的约束条件的指标~(index) 组成的集合.
+即在点~${x}$ 处, 等式成立的约束条件的指标~(Index) 组成的集合.
 将一般的二次规划的~KKT 条件~\eqref{eq:quadratic-programming-kkt} 根据积极集~$\mathcal{A}({x}^*)$ 改写一下, 即有
 \begin{equation}
 \label{eq:qp-active-set-kkt}
 \begin{aligned}
 & G {x}^* + d + \sum\limits_{i \in \mathcal{A}({x}^*)} \lambda_i^* {a}_i = {0}, \\
-& {a}_i^T {x}^* = b_i, ~~ \forall i \in \mathcal{A}({x}^*), \\
-& {a}_i^T {x}^* \leqslant b_i, ~~ \forall i \in \mathcal{I} \setminus \mathcal{A}({x}^*), \\
+& {a}_i {x}^* = b_i, ~~ \forall i \in \mathcal{A}({x}^*), \\
+& {a}_i {x}^* \leqslant b_i, ~~ \forall i \in \mathcal{I} \setminus \mathcal{A}({x}^*), \\
 & \lambda_i^* \geqslant 0, ~~ \forall i \in \mathcal{I} \cap \mathcal{A}({x}^*).
 \end{aligned}
 \end{equation}
@@ -452,10 +453,10 @@ F & = Y^T G Z \left( Z^T G Z \right)^{-1} Z^T G Y - Y^T G Y.\\
 {\rm s.t.} & {a}_i^T {x} = b_i, ~ i \in \mathcal{A}({x}^*).
 \end{array}
 \end{equation}
-这说明, 如果事先知道最优点处的积极集~$\mathcal{A}({x}^*),$ 那么求解含不等式约束的二次规划问题几乎~(注意~KKT 条件~\eqref{eq:qp-active-set-kkt} 中的最后两个条件) 等价于求解一个等式约束的二次规划问题. 但通常这是不可能的, 因此不能通过求解等式问题~\eqref{eq:qp-active-set-1} 来求解原二次规
+这说明, 求解含不等式约束的二次规划问题几乎~(注意~KKT 条件~\eqref{eq:qp-active-set-kkt} 中的最后两个条件) 等价于求解一个等式约束的二次规划问题, 如果事先知道~$\mathcal{A}({x}^*).$ 但通常这是不可能的, 因此不能通过求解等式问题~\eqref{eq:qp-active-set-1} 来求解原二次规
 划问题~\eqref{eq:quadratic-programming-1}.
 
-在积极集法中, 依据以上的观察, 我们将积极集~$\mathcal{A}$ 确定的约束看作等式约束, 而暂时忽略其余约束条件, 并通过某种迭代的方式不断修正调整这个集合, 直到识别出原问题~\eqref{eq:quadratic-programming-1} 的解处的正确的积极约束. 更具体来说, 在第~$k$ 次迭代, 从可行点~${x}^{(k)}$ 出发,
+在积极集法中, 依据以上的观察, 将积极集~$\mathcal{A}$ 确定的约束看作等式约束, 而暂时忽略其余约束条件, 并通过某种迭代的方式不断修正调整这个集合, 直到识别出原问题~\eqref{eq:quadratic-programming-1} 的解处的正确的积极约束. 更具体来说, 在第~$k$ 次迭代, 从可行点~${x}^{(k)}$ 出发,
 积极集为~$\mathcal{A} = \mathcal{A}({x}^{(k)}).$ 在这一步迭代中,
 求解等式问题~\eqref{eq:qp-active-set-1}. 更方便的做法是将原点平移到~${x}^{(k)},$ 令~${s} = {x} - {x}^{(k)},$ 求解问题
 \begin{equation}
@@ -465,33 +466,28 @@ F & = Y^T G Z \left( Z^T G Z \right)^{-1} Z^T G Y - Y^T G Y.\\
 {\rm s.t.} & {a}_i^T {s} = 0, ~ i \in \mathcal{A},
 \end{array}
 \end{equation}
-其中
-\begin{equation*}
-{g}^{(k)} = \nabla q({x}^{(k)}) = G {x}^{(k)} + {d}
-\end{equation*}
-是原二次规划问题~\eqref{eq:quadratic-programming-1} 的目标函数~$q({x})$ 在点~${x}^{(k)}$ 处的梯度向量.  这个问题是一个等式约束的二次规划问题, 可以用上一小节~\S\ref{subsec:7.2.1} 中介绍的等式约束二次规划问题的求解方法进行求解. 记问题~\eqref{eq:qp-active-set-2} 的解为~${s}^{(k)},$ 需要对各种可能的情况进行分类讨论.
+其中~${g}^{(k)} = \nabla q({x}^{(k)}) = G {x}^{(k)} + {d}$ 是原二次
+规划问题~\eqref{eq:quadratic-programming-1} 的目标函数~$q({x})$ 在点~${x}^{(k)}$ 处的梯度向量.  这个问题是一个等式约束的二次规划问题, 可以用上一小节~\S\ref{subsec:7.2.1} 中介绍的等式约束二次规划问题的求解方法进行求解. 记问题~\eqref{eq:qp-active-set-2} 的解为~${s}^{(k)},$ 需要对各种可能的情况进行分类讨论.
 
-第一种情况是~${s}^{(k)} = {0},$ 即~${x}^{(k)}$ 是当前等式约束问题~\eqref{eq:qp-active-set-1} 的解, 那么可以根据式~\eqref{eq:general-elim-lagrange} 计算积极约束的拉格朗日乘子, 记为~${\lambda}^{(k)},$  即有
+如果~${s}^{(k)} = {0},$ 即~${x}^{(k)}$ 是当前等式约束问题~\eqref{eq:qp-active-set-1} 的解, 那么可以根据式~\eqref{eq:general-elim-lagrange} 计算积极约束的拉格朗日乘子, 记为~${\lambda}^{(k)},$  即有
 \begin{equation}
 \label{eq:qp-active-set-lambda}
-{g}^{(k)} + \sum\limits_{i \in \mathcal{A}} \lambda_i^{(k)} a_i = 0.
+{g}^{(k)} + \sum\limits_{i \in \mathcal{A}} \lambda_i^{(k)} \alpha_i = 0.
 \end{equation}
 此时, 除对偶可行性条件~$\lambda_i \geqslant 0, ~ i \in \mathcal{I}$ 以外, 其余~KKT
 条件~\eqref{eq:qp-active-set-kkt} 均满足. 当与原问题不等式约束对应的拉格朗日乘子均非负, 即
 \begin{equation*}
 \lambda_i^{(k)} \geqslant 0, ~ \forall i \in \mathcal{I} \cap \mathcal{A},
 \end{equation*}
-则~$x^{(k)}$ 是原问题的~KKT 点, 迭代结束, 求解完毕. 如若不然, 即有一个或多个拉格朗日乘子取负值,
-这时候一个有效的策略是从积极集中去掉某一个负的拉格朗日乘子对应的约束条件, 并求解由此得到的新的等式约束问题, 相应的解可以使目标函数值下降. 一般我们取
+则~$x^{(k)}$ 是原问题的~KKT 点, 迭代结束, 求解完毕. 若不然, 则设
 \begin{equation}
 \label{eq:qp-active-set-inactive-index}
 q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 \end{equation}
 有~$\lambda_q^{(k)} < 0.$ 令~$\mathcal{A} = \mathcal{A} \setminus \{ q \},$
-代入问题~\eqref{eq:qp-active-set-2}, 并求解此新的等式约束问题. 可以证明, 这个新的等式约束问题的解,
-暂记为~$s,$ 的确是我们去掉的第~$q$ 个约束条件的可行方向, 即有~$a_p^T s \geqslant 0$ (去掉其它任何一个负的拉格朗日乘子对应的约束条件得到的等式约束问题解得的解, 都是相应约束条件的可行方向). 更进一步地, 若~$s$ 还满足一些好的条件, 例如二阶最优性充分条件, 那么~$s$ 会是目标函数的~(严格) 下降方向.
+代入问题~\eqref{eq:qp-active-set-2}, 并求解此新的子问题.
 
-第二种情况是~${s}^{(k)} \neq {0},$ 即~${x}^{(k)}$ 不是当前等式约束问题~\eqref{eq:qp-active-set-1} 的解, 那么我们需要进一步检验试探点
+如果~${s}^{(k)} \neq {0},$ 即~${x}^{(k)}$ 不是当前等式约束问题~\eqref{eq:qp-active-set-1} 的解, 那么进一步检验试探点
 \begin{equation}
 \label{eq:qp-active-set-test-point}
 \bar{{x}}^{(k)} = {x}^{(k)} + {s}^{(k)}
@@ -501,12 +497,12 @@ q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 \label{eq:qp-active-set-next-step-1}
 {x}^{(k+1)} = \bar{{x}}^{(k)} = {x}^{(k)} + {s}^{(k)},
 \end{equation}
-积极集保持不变, 进入下一步迭代搜索. 如若不然, 即存在指标~$i \not\in \mathcal{A},$ 使得
+积极集保持不变, 进入下一步迭代搜索. 如果不然, 即存在指标~$i \not\in \mathcal{A},$ 使得
 \begin{equation*}
 {a}_i^T {x}^{(k)} - {b} + {s}^{(k)} > 0,
 \end{equation*}
 此时试探点~$\bar{{x}}^{(k)}$ 不是原问题的可行点, 需要将其投影到原问题的可行域.
-一个自然的想法是, 沿着方向~${p}^{(k)} = {s}^{(k)}$ 进行线搜索, 选一个小于~$1$ 但尽可能大的步长
+沿着方向~${p}^{(k)} = {s}^{(k)}$ 进行线搜索, 选一个小于~$1$ 但尽可能大的步长
 \begin{equation}
 \label{eq:qp-active-set-step-len-1}
 \begin{aligned}
@@ -517,16 +513,16 @@ q = \argmin_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)},
 注意~$\bar{\alpha}_k$ 是严格小于~$1$ 的, 因为此时的试探点~${x}^{(k)} + {s}^{(k)}$ 不可行. 取指标~$j$ 使得第~$j$ 个约束取得上式中~$\frac{b_i - {a}_i^T {x}^{(k)}}{{a}_i^T {p}^{(k)}}$ 的最大值, 即
 \begin{equation}
 \label{eq:qp-active-set-step-len-2}
-j = \argmin_{\substack{i: i \not\in \mathcal{A} \\ {a}_i^T {p}^{(k)} > 0}} \frac{b_i - {a}_i^T {x}^{(k)}}{{a}_i^T {p}^{(k)}}, ~~ \bar{\alpha}_k = \frac{b_j - {a}_j^T {x}^{(k)}}{{a}_j^T {p}^{(k)}},
+\bar{\alpha}_k = \frac{b_j - {a}_j^T {x}^{(k)}}{{a}_j^T {p}^{(k)}}, ~~ j = \argmin_{\substack{i: i \not\in \mathcal{A} \\ {a}_i^T {p}^{(k)} > 0}} \frac{b_i - {a}_i^T {x}^{(k)}}{{a}_i^T {p}^{(k)}},
 \end{equation}
-并称指标~$j$ 对应的约束为阻滞~(blocking) 约束. 取下一步迭代点为
+并称指标~$j$ 对应的约束为阻滞~(Blocking) 约束. 取
 \begin{equation}
 \label{eq:qp-active-set-next-step-2}
 {x}^{(k+1)} = {x}^{(k)} + \bar{\alpha}_k {s}^{(k)}, ~~ \mathcal{A} \gets \mathcal{A} \cup \{ j \}.
 \end{equation}
 这里把指标~$j$ 添加到了积极集, 是因为对于~${x}^{(k+1)},$ 指标~$j$ 对应的约束条件等式成立, 非积极约束~$j$ 变成积极的. 迭代格式~\eqref{eq:qp-active-set-next-step-1}
 与~\eqref{eq:qp-active-set-next-step-2} 可以统一表述为: 以等式问题~\eqref{eq:qp-active-set-2}
-的解~${s}^{(k)}$ 为搜索方向~${p}^{(k)},$ 并以
+的解~${s}^{(k)}$ 为搜索方向~${p}^{(k)},$ 以
 \begin{equation}
 \label{eq:qp-active-set-step-len-uniform}
 \alpha_k = \min (1, \bar{\alpha}_k)
@@ -536,158 +532,53 @@ j = \argmin_{\substack{i: i \not\in \mathcal{A} \\ {a}_i^T {p}^{(k)} > 0}} \frac
 \label{eq:qp-active-set-next-step-uniform}
 {x}^{(k+1)} = {x}^{(k)} + \alpha_k {p}^{(k)},
 \end{equation}
-同时根据是否有阻滞约束确定是否更新积极集: 若~$\alpha_k < 1,$ 有约束阻滞~$j,$ 则将~$j$ 添加到积
-极集~$\mathcal{A}.$
+同时根据是否出现阻滞约束确定是否更新积极集~$\mathcal{A}.$ 具体来说, 若~$\alpha_k < 1,$ 那么根据我们的定义, 指标~$j$ 对应的约束为阻滞约束, 这种情况下我们将~$j$ 添加到积极集~$\mathcal{A}$ 中.
 
 至此, 可以以伪代码的形式, 将经典的积极集法表示为算法~\ref{algo:active-set}.
-
-\begingroup
-\begin{algorithm}[!htbp]
-\caption{求解带不等式约束的一般二次规划
+\begin{algorithm}[htbp]
+\caption{求解带不等式约束的二次规划
 问题~\eqref{eq:quadratic-programming-1} 的积极集法}\label{algo:active-set}
 \begin{algorithmic}[1]
-\renewcommand{\algorithmicrequire}{\textbf{输入:}}
-\renewcommand{\algorithmicensure}{\textbf{输出:}}
-\REQUIRE $n$ 阶对称阵~$G,$ 列满秩的~$n \times m$ 矩阵~$A,$ ${d} \in \mathbb{R}^n, {b} \in \mathbb{R}^m,$ 等式约束的数量~$m_1$
-\ENSURE 带不等式约束的一般二次规划问题~\eqref{eq:quadratic-programming-1} 的解~$x^*$
+\STATE 给定~$n$ 阶对称阵~$G,$ 列满秩的~$n \times m$ 的矩阵~$A,$ ${d} \in \mathbb{R}^n, {b} \in \mathbb{R}^m,$ 等式约束的数量~$m_1$. 随机选取一个可行点~${x}^{(0)},$ 确定相应
+的积极集~$\mathcal{A},$ $k \gets 0.$
 
-\STATE 初始化: 随机选取一个可行点~${x}^{(0)},$ 确定相应的积极集~$\mathcal{A},$ $k \gets 0$\;
+\STATE 求等式约束二次规划问题~\eqref{eq:qp-active-set-2} 解~${s}^{(k)}$.
 
-\WHILE{true}
+\STATE 若~${s}^{(k)} = 0$, 由~\eqref{eq:qp-active-set-lambda} 式计算拉格朗
+日乘子~${\lambda}^{(k)}$, 计算指标~$q \gets \argmin\limits_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)}$.
 
-\STATE 求等式约束二次规划问题~\eqref{eq:qp-active-set-2} 解~${s}^{(k)}$\;
+\STATE 若~$\lambda^{(k)}_q \geqslant 0$, ${x}^* \gets {x}^{(k)}$, 算法终止, 返回~${x}^*$. 否则, ${x}^{(k+1)} \gets {x}^{(k)}$, 将指标~$q$ 从积极集~$\mathcal{A}$ 中移除: $\mathcal{A} \gets \mathcal{A} \setminus \{ j \}$.
 
-\IF{${s}^{(k)} = 0$}
+\STATE 取线搜索方向~${p}^{(k)} \gets {s}^{(k)}$, 由式~\eqref{eq:qp-active-set-step-len-2}
+计算~$\bar{\alpha}_k$ 以及相应的约束条件的指标$j$, 取步长~$\alpha_k \gets \min (1, \bar{\alpha}_k)$, 令~${x}^{(k+1)} \gets {x}^{(k)} + \alpha_k {p}^{(k)}$.
 
-\STATE 由\eqref{eq:qp-active-set-lambda}式计算拉格朗日乘子${\lambda}^{(k)}$\;
-\STATE 计算指标~$q \gets \argmin\limits_{i \in \mathcal{I} \cap \mathcal{A}} \lambda_i^{(k)}$\;
 
-\IF{$\lambda^{(k)}_q \geqslant 0$}
+\STATE 若~$\alpha_k < 1$, 将阻滞约束条件的指标~$j$ 添加到积极集~$\mathcal{A}$ 中: $\mathcal{A} \gets \mathcal{A} \cup \{ j \}$.
 
-\STATE ${x}^* \gets {x}^{(k)}$\;
-\STATE \textbf{算法终止, 返回~${x}^*$}\;
-
-\ELSE
-
-\STATE ${x}^{(k+1)} \gets {x}^{(k)}$\;
-\STATE 将指标~$q$ 从积极集~$\mathcal{A}$ 中移除: $\mathcal{A} \gets \mathcal{A} \setminus \{ j \}$.
-
-\ENDIF
-
-\ELSE
-
-\STATE 取线搜索方向~${p}^{(k)} \gets {s}^{(k)}$\;
-\STATE 由~\eqref{eq:qp-active-set-step-len-2} 式计算~$\bar{\alpha}_k$ 以及相应的约束条件的指标$j$\;
-\STATE 取步长~$\alpha_k \gets \min (1, \bar{\alpha}_k)$\;
-\STATE 令~${x}^{(k+1)} \gets {x}^{(k)} + \alpha_k {p}^{(k)}$\;
-
-\IF{$\alpha_k < 1$}
-
-\STATE 将阻滞约束条件的指标~$j$ 添加到积极集~$\mathcal{A}$ 中: $\mathcal{A} \gets \mathcal{A} \cup \{ j \}$\;
-
-\ENDIF
-
-\ENDIF
-
-\STATE $k \gets k + 1$\;
-
-\ENDWHILE
+\STATE 令~$k=k+1$, 转步~2.
 \end{algorithmic}
 \end{algorithm}
-\endgroup
-
-% \begin{thm}
-% \label{thm:qp-active-set-thm1}
-% 设二次规划问题~\eqref{eq:quadratic-programming-1} 中的约束条件梯度~$a_i$ 线性无关. 假设~${x}^{(k)}$ 满足对应于积极集~$\mathcal{A}$ 的等式约束问题的一阶最优性条件，同时存在积极集~$\mathcal{A}$ 中的某个指标~$j,$ 其对应的拉格朗日乘子~$\lambda_J^{(k)} < 0.$
-% \end{thm}
-
-下面举一个简单的例子，来说明用积极集法求解含不等式约束的二次规划问题的具体步骤.
 
 \begin{exam}\label{eg:qp-active-set-algo}
-考虑如下的二次规划问题
+下面举例说明用积极集法求解含不等式约束的二次规划问题的步骤. 考虑如下的二次规划问题
 \begin{equation*}
 \begin{array}{cl}
 \min & q({x}) = (x_1 - 1)^2 + (x_2 - 2.5)^2, \\
-{\rm s.t.} & -x_1 + 2x_2 - 2 \leqslant 0, \\
-& x_1 + 2x_2 - 6 \leqslant 0, \\
-& x_1 - 2x_2 - 2 \leqslant 0, \\
-& -x_1 \leqslant 0, \\
-& -x_2 \leqslant 0,
+{\rm s.t.} & \left\{\begin{array}{l}-x_1 + 2x_2 - 2 \leqslant 0, \\
+ x_1 + 2x_2 - 6 \leqslant 0, \\
+ x_1 - 2x_2 - 2 \leqslant 0, \\
+ -x_1 \leqslant 0, \\
+ -x_2 \leqslant 0,\end{array}\right.
 \end{array}
 \end{equation*}
 用积极集法进行求解. 该问题的可行域可见图~\ref{fig:active-set-eg}, 由其中实线以及坐标轴围成的阴影区域构成.
-
-% \begin{figure}[htpb]\label{fig:active-set-eg}
-% \centering
-% \includegraphics[width=0.75\textwidth]{fig-qp-active-set.png}
-% \caption{积极集法求解例~\ref{eg:qp-active-set-algo} 的迭代示意图}
-% \end{figure}
-
-\newif\ifsteparrows
-% \steparrowstrue
-\steparrowsfalse
-
-\begin{figure}[ht]
+\begin{figure}[htpb]
 \centering
-\larger[1]
-\begin{tikzpicture}[scale=2.5, circle defined by/.style args={center #1 and point #2}{insert path={let \p1=($(#2)-(#1)$),\n1={veclen(\x1,\y1)} in (#1) circle[radius=\n1]}}]
-% \draw[gray!30, thin, dashed] (-0.5, -0.5) grid (4.6, 3.9);
-\coordinate (C) at (1, 2.5);
-% coordinate axes
-\draw[-{Stealth}] (-0.3, 0) -- (4.7, 0) node [right] {$x_1$};
-\draw[-{Stealth}] (0, -0.3) -- (0, 3.7) node [above] {$x_2$};
-% feasible region
-\draw[fill=gray!20] (0, 1) node (p1) [left] {$(0, 1)$} -- (2, 2) node (p2) [above] {$(2, 2)$} -- (4, 1) node (p3) [right] {$(4, 1)$} -- (2, 0) node (p4) [below] {$(2, 0)$} -- (0, 0) -- (0, 1);
-% iterations of the active-set algorithm
-\node[below = -0.1 of p4] (x01) {${x}^{(1)}, {x}^{(0)}$};
-\draw[dashed, line width=3] (2, 0) -- (1, 0) node (x23) [below] {${x}^{(3)}, {x}^{(2)}$};
-\path[name path = line1] (0, 1) -- (2, 2);
-\path[name path = vertical1] (1, 0) -- (1, 4);
-\draw[dashed, line width=3, name intersections = {of = line1 and vertical1, by = {x4}}]  (1, 0) -- (x4);
-\node[below right = -0.2 and -0.03 of x4] (xx4) {${x}^{(4)}$};
-\draw[dashdotted, thin] (x4) -- (C) node[above] (barx3) {$\bar{{x}}^{(3)}$};
-\draw plot[only marks,mark=x,mark size=2] (C);
-\node[right = -0.2 of barx3] {\smaller 不可行};
-\path (barx3) edge [draw, bend right, -{Stealth}] ([xshift=-2, yshift=2]x4);
-\coordinate (c1) at (0, 1);
-\coordinate (c2) at (2, 2);
-\coordinate (x5) at ($(c1)!(C)!(c2)$);
-\draw[dashed, line width=3] (x4) -- (x5);
-\node[below right = -0.1 and -0.2 of x5] {${x}^{(5)}$};
-\foreach \x in {(2,0), (1,0), (x4), (x5)} \draw[fill=black] \x circle (0.06);
-% contour: circles
-\begin{scope}
-% \clip (-.6, -.3) rectangle (3, 3.2);
-\draw[dashed, circle defined by=center C and point x5];
-\coordinate (midx5) at ($(C)!0.5!(x5)$);
-\draw[dashed, circle defined by=center C and point midx5];
-\coordinate (p6) at ($(C)!1.5!(x5)$);
-\draw[dashed, circle defined by=center C and point p6];
-\end{scope}
-% contour: arcs
-\begin{scope}
-\clip (-.6, -.3) rectangle (2.5, 1.9);
-\coordinate (p7) at (1, 0);
-\draw[dashed, circle defined by=center C and point p7];
-\coordinate (p8) at ($(C)!0.75!(p7)$);
-\draw[dashed, circle defined by=center C and point p8];
-\end{scope}
-
-% optional plots
-\ifsteparrows
-\path ([xshift=5]x01.south) edge [draw, bend left, -{Stealth}] ([xshift=-7]x01.south);
-\path ([yshift=3]x01.west) edge [draw, -{Stealth}] ([xshift=-4, yshift=-3]x23.east);
-\path ([xshift=5]x23.south) edge [draw, bend left, -{Stealth}] ([xshift=-7]x23.south);
-\path (0.9, 0.1) edge [draw, bend left, -{Stealth}] (barx3.west);
-\path ([xshift=-0.3, yshift=2]x4) edge [draw, bend left, -{Stealth}] ([xshift=-1, yshift=2]x5);
-\fi
-\end{tikzpicture}
-\caption{积极集法求解例\ref{eg:qp-active-set-algo}~的迭代示意图}
-\label{fig:active-set-eg}
+\includegraphics[width=0.75\textwidth]{fig-qp-active-set.png}
+\caption{积极集法求解例~\ref{eg:qp-active-set-algo}
+的迭代示意图}\label{fig:active-set-eg}
 \end{figure}
-
-
-选取初始点~${x}^{(0)} = (2, 0)^T,$ 用~$1$ 至~$5$ 依次作为约束条件的指标. 在初始点~${x}^{(0)}$ 处, 约束~$3$ 和~$5$ 满足等式关系, 是积极约束, 所以初始积极集~$\mathcal{A} = \{ 3, 5 \}.$ 当前需要求解的等式问题~\eqref{eq:qp-active-set-1} 具体为
+选取初始点~${x}^{(0)} = (2, 0)^T,$ 用~$1$ 至~$5$ 依次作为约束条件的指标. 在初始点~${x}^{(0)}$ 处, 约束~$3$ 和~$5$ 满足等式关系, 是积极约束, 所以初始积极集~$\mathcal{A} = \{ 3, 5 \}.$ 当前需要求解的等式问题~\eqref{eq:qp-active-set-1} 为
 \begin{equation*}
 \begin{array}{cl}
 \min & q({x}) = (x_1 - 1)^2 + (x_2 - 2.5)^2, \\
@@ -695,77 +586,37 @@ j = \argmin_{\substack{i: i \not\in \mathcal{A} \\ {a}_i^T {p}^{(k)} > 0}} \frac
 & x_2 = 0,
 \end{array}
 \end{equation*}
-或者来求解经过平移的问题~\eqref{eq:qp-active-set-2}， 具体形式如下
-\begin{equation}
-\label{eq:qp-active-set-eg-problem}
+或者经过平移的问题~\eqref{eq:qp-active-set-2}
+\begin{equation*}
 \begin{array}{cl}
 \min & q({s}) = (s_1 + 1)^2 + (s_2 - 2.5)^2, \\
 {\rm s.t.} & s_1 - 2s_2 = 0, \\
 & s_2 = 0.
 \end{array}
-\end{equation}
-很容易看到~${x}^{(0)}$ $($即~${s}^{(0)} = {0}$~$)$ 是该问题的解.
+\end{equation*}
+很容易看到~${x}^{(0)}$ $($即~${s}^{(0)} = {0}$$)$ 是该问题的解.
 由式~\eqref{eq:qp-active-set-lambda} 求解积极约束的拉格朗日乘子, 即求解方程组
 \begin{equation*}
 \begin{bmatrix} 1 \\ -2 \end{bmatrix} \lambda_3^{(0)} + \begin{bmatrix} 0 \\ -1 \end{bmatrix} \lambda_5^{(0)} = \begin{bmatrix} -2 \\ 5 \end{bmatrix},
 \end{equation*}
-解得
-\begin{equation*}
-\lambda_3^{(0)} = -2, \lambda_5^{(0)} = -1, ~~\text{指标}~ q = \argmin\limits_{i \in \{ 3, 5 \}} \lambda_i^{(0)} = 3.
-\end{equation*}
-由于~$\lambda_q^{(0)} = \lambda_3^{(0)} = -2 < 0,$ 因此置
-\begin{equation*}
-{x}^{(1)} = {x}^{(0)} = (2, 0)^T,
-\end{equation*}
-同时将指标~$q = 3$ 从积极集中删去, 进入下一步迭代.
-
-接下来需要求解等式问题
+得~$\lambda_3^{(0)} = -2, \lambda_5^{(0)} = -1.$ 指标~$q = \argmin\limits_{i \in \{ 3, 5 \}} \lambda_i^{(0)} = 3.$ 由于~$\lambda_q^{(0)} = \lambda_3^{(0)} = -2 < 0,$ 因此置~${x}^{(1)} = {x}^{(0)},$ 同时将指标~$q = 3$ 从积极集中删去, 进入下一步迭代. 接下来需要求解等式问题
 \begin{equation*}
 \begin{array}{cl}
 \min & q({s}) = (s_1 + 1)^2 + (s_2 - 2.5)^2, \\
 {\rm s.t.} & s_2 = 0.
 \end{array}
 \end{equation*}
-容易解得~${s}^{(1)} = (-1, 0)^T.$ 此时, 试探点~${x}^{(1)} + {s}^{(1)} = (1, 0)^T$ 是可行点, 于是可以置
-\begin{equation*}
-{x}^{(2)} = {x}^{(1)} + {s}^{(1)} = (1, 0)^T,
-\end{equation*}
-同时积极集~$\mathcal{A} = \{ 5 \}$ 保持不变, 进入下一步迭代.
-
-容易验证~${x}^{(2)}$ 是接下来这一步要解的等式问题的可行解, 进而可计算得到相应的积极约束的拉格朗日乘子~$\lambda_5^{(2)} = -5.$ 此时, 约束~$5$ 变成非积极的, 积极集~$\mathcal{A}$ 变为空集~$\emptyset.$ 置
-\begin{equation*}
-{x}^{(3)} = {x}^{(2)} = (1, 0)^T
-\end{equation*}
-进入下一步迭代.
-
-再次求解当前~$($经过平移$)$ 的等式约束问题~$($实际上已成为无约束问题$)$
+容易解得~${s}^{(1)} = (-1, 0)^T.$ 此时, 试探点~${x}^{(1)} + {s}^{(1)} = (1, 0)^T$ 是可行点,  置~${x}^{(2)} = {x}^{(1)} + {s}^{(1)} = (1, 0)^T,$ 同时积极集~$\mathcal{A} = \{ 5 \}$ 保持不变, 进入下一步迭代. 容易验证~${x}^{(2)}$ 是这一步要解的等式问题的可行解, 进而可计算得相应的积极约束的拉格朗日乘子~$\lambda_5^{(2)} = -5.$ 此时, 约束~$5$ 变成非积极的, 积极集~$\mathcal{A} = \emptyset$ 变为空集. 置~${x}^{(3)} = {x}^{(2)} = (1, 0)^T$ 进入下一步迭代. 再次求解当前的等式约束问题~$($实际上已成为无约束问题$)$
 \begin{equation*}
 \min ~~ q({s}) = s_1^2 + (s_2 - 2.5)^2,
 \end{equation*}
 得解~${s}^{(3)} = (0, 2.5)^T.$ 试探点~${x}^{(3)} + {s}^{(3)} = (1, 2.5)^T$ 不是可行点,
 因此需要以~${p}^{(3)} = {s}^{(3)}$ 为方向进行线搜索~${x}^{(3)} + \alpha_3 {p}^{(3)},$
-并由式~\eqref{eq:qp-active-set-step-len-2} 以及式~\eqref{eq:qp-active-set-step-len-uniform} 算得最优步长~$\alpha_3 = 0.6,$ 以及相应阻滞约束的指标~$j = 1.$ 置
-\begin{equation*}
-{x}^{(4)} = {x}^{(3)} + \alpha_3 {p}^{(3)} = (1, 1.5)^T,
-\end{equation*}
-并将阻滞约束的指标~$j = 1$ 添加到积极集得~$\mathcal{A} = \{ 1 \},$ 进入下一步迭代.
-
-继续求解当前的等式问题
-\begin{equation*}
-\begin{array}{cl}
-\min & q({s}) = s_1 + (s_2 - 1)^2, \\
-{\rm s.t.} & s_1 - 2s_2 = 0.
-\end{array}
-\end{equation*}
-解得~${s}^{(4)} = (0.4, 0.2)^T.$ 相应的试探点~${x}^{(4)} + {s}^{(4)} = (1.4, 1.7)^T$ 可行, 于是得新的迭代点
-\begin{equation*}
-{x}^{(5)} = {x}^{(4)} + {s}^{(4)} = (1.4, 1.7)^T.
-\end{equation*}
-由于~${x}^{(5)}$ 是当前等式问题的可行点, 且解得积极约束的拉格朗日乘子~$\lambda_1^{(5)} = 0.8 > 0,$ 算法终止条件达成, 得原问题的最优解
+并由式~\eqref{eq:qp-active-set-step-len-2} 以及式~\eqref{eq:qp-active-set-step-len-uniform} 算得最优步长~$\alpha_3 = 0.6,$ 以及相应阻滞约束的指标~$j = 1.$ 置~${x}^{(4)} = {x}^{(3)} + \alpha_3 {p}^{(3)} = (1, 1.5)^T,$ 并将阻滞约束的指标~$j = 1$ 添加到积极集得~$\mathcal{A} = \{ 1 \},$ 进入下一步迭代. 再次求解当前的等式问题, 得~${s}^{(4)} = (0.4, 0.2)^T.$ 相应的试探点~${x}^{(4)} + {s}^{(4)} = (1.4, 1.7)^T$ 可行, 于是得新的迭代点~${x}^{(5)} = (1.4, 1.7)^T.$ 由于~${x}^{(5)}$ 是当前等式问题的可行点, 且解得积极约束的拉格朗日乘子~$\lambda_1^{(5)} = 0.8 > 0,$ 算法终止条件达成,  得原问题的最优解
 \begin{equation*}
 {x}^* = {x}^{(5)} = (1.4, 1.7)^T.
 \end{equation*}
-我们将以上每一步的数值结果总结在表~\ref{tab:active-set-eg} 中， 这样读者会对整个算法流程有更清晰的认知. 表中的``$\backslash$''表示当前迭代步不需要计算相应的量.
+将每一步的数值结果总结在表~\ref{tab:active-set-eg} 中. 表中的``$\backslash$''表示当前迭代步不需要计算相应的量.
 \begin{table}[H]
     \caption{积极集法求解例~\ref{eg:qp-active-set-algo} 数值结果}
     \label{tab:active-set-eg}
