--- a/content/intro.tex
+++ b/content/intro.tex
@@ -1,12 +1,12 @@
 % finished
 
-具有二次目标函数和线性约束的约束优化问题被称为二次规划~(quadratic programming, QP) 问题. 这是一类非常常见的约束优化问题, 且它们也常常作为一般的约束优化问题的子问题出现. 二次规划问题的一般形式为
+具有二次目标函数和线性约束的约束优化问题被称为二次规划~(Quadratic Programming, QP) 问题. 这是一类非常常见的约束优化问题, 且它们也常常作为一般的约束优化问题的子问题出现. 二次规划问题的一般形式为
 \begin{equation}
 \label{eq:quadratic-programming-1}
 \begin{array}{cl}
 \min & q({x}) := \frac{1}{2} {x}^T G {x} + {d}^T {x}, \\
-{\rm s.t.} & {a}_i^T {x} = b_i, ~~ i \in \mathcal{E} = \{1, \ldots, m_1\}, \\
-& {a}_i^T {x} \leqslant b_i, ~~ i \in \mathcal{I} = \{m_1 + 1, \ldots, m\},
+{\rm s.t.} & \left\{\begin{array}{l}{a}_i^T {x} = b_i, ~~ i \in \mathcal{E} = \{1, \ldots, m_1\}, \\
+ {a}_i^T {x} \leqslant b_i, ~~ i \in \mathcal{I} = \{m_1 + 1, \ldots, m\},\end{array}\right.
 \end{array}
 \end{equation}
 其中~$G$ 是~$n$ 阶对称方阵, ${d}, {a}_i,$ 是~$n$ 维列向量, $b_i$ 是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达为更加紧凑的形式:
@@ -19,8 +19,7 @@
 \end{equation}
 其中~$A_{\mathcal{E}} = ({a}_1, \ldots, {a}_{m_1}), {b}_{\mathcal{E}} = (b_1, \ldots, b_{m_1})^T;$ $A_{\mathcal{I}} = ({a}_{m_1+1}, \ldots, {a}_m), {b}_{\mathcal{I}} = (b_{m_1+1}1, \ldots, b_m)^T.$ $A^T_{\mathcal{I}} {x} \preccurlyeq {b}_{\mathcal{I}}$ 表示
 向量~$A^T_{\mathcal{I}} {b}_{\mathcal{I}}$ 的每个元素都小于等于向量~${b}_{\mathcal{I}}$ 相应位置元素. 问题~\eqref{eq:quadratic-programming-2} 的~KKT 条件为
-\begin{equation}
-\label{eq:quadratic-programming-kkt}
+\begin{equation}\label{eq:quadratic-programming-kkt}
 \begin{aligned}
 & \nabla q({x}^*) + A {\lambda}^* = {0}, \\
 & A^T_{\mathcal{E}} {x}^* - {b}_{\mathcal{E}} = {0}, \\
@@ -30,4 +29,6 @@
 其中~$A = ({a}_1, \ldots, {a}_m);$ ${\lambda}^* = (\lambda_1^*, \ldots, \lambda_m^*)^T$ 为拉格朗日乘子, ${\lambda}^*_{\mathcal{I}} = (\lambda_{m_1+1}^*, \ldots, \lambda_m^*)^T;$ ${x}^*$ 为~KKT 点. 值得注意的是, 由于二次规划问题线性约束规范总成立, 二次规划问题的任一解都满足~KKT
 条件~\eqref{eq:quadratic-programming-kkt}.
 
-与线性规划问题类似, 一个二次规划问题总是能在有限步内求解, 或者证明其是不可行的或者无~(下) 界的. 当二次规划问题有解时, 若目标函数~$q({x}) = \frac{1}{2} {x}^T G {x} + {d}^T {x}$ 的~Hessian 阵~$G$ 是半正定的, 那么~$q({x})$ 是凸函数, 则该二次规划问题是凸规划问题, 其~KKT 点即为全局极小值点; 如果~$G$ 是正定的, 则解是唯一的~(唯一的全局极小值点). 当~$G$ 不定时, 目标函数~$q({x})$ 非凸, 可能有多个鞍点以及局部极小值点, 这些局部极小值点可能不是全局最优解. 此时, 求解全局最优解是一个~NP-难的问题~\cite{Murty_1987}.
+与线性规划问题类似, 对于一个二次规划问题来说，要么它的解能在有限步内被求得, 要么我们可以证明这个问题是不可行的或者无~(下) 界的. 当二次规划问题有解时, 若目标函数~$q({x}) = \frac{1}{2} {x}^T G {x} + {d}^T {x}$ 的~Hessian 阵~$G$ 是半正定的, 那么~$q({x})$ 是凸函数, 则该二次规划问题是凸规划问题, 其~KKT 点即为全局极小值点; 如果~$G$ 是正定的, 则解是唯一的~(唯一的全局极小值点). 当~$G$ 不定时, 目标函数~$q({x})$ 非凸, 可能有多个鞍点以及局部极小值点, 这些局部极小值点可能不是全局最优解. 此时, 求解全局最优解是一个~NP-难的问题~\cite{Murty_1987}.
+
+% Murty_1987: K. G. Murty, S. N. Kabadi. Some NP-complete problems in quadratic and nonlinear programming[J]. Mathematical Programming, 1987, 39(2): 117-129.
